// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--row emotion-EuiDescriptionList"
>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList__title-normal"
  >
    Title 1
  </dt>
  <dd
    class="euiDescriptionList__description css-1u82jm0-normal"
  >
    Description 1
  </dd>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList__title-normal"
  >
    <em>
      Title 2
    </em>
  </dt>
  <dd
    class="euiDescriptionList__description css-1u82jm0-normal"
  >
    <code>
      Description 2
    </code>
  </dd>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList__title-normal"
  >
    Title 3
  </dt>
  <dd
    class="euiDescriptionList__description css-1u82jm0-normal"
  >
    Description 3
  </dd>
</dl>
`;

exports[`EuiDescriptionList is rendered 1`] = `
<dl
  aria-label="aria-label"
  class="euiDescriptionList euiDescriptionList--row testClass1 testClass2 emotion-EuiDescriptionList"
  data-test-subj="test subject string"
>
  Content
</dl>
`;

exports[`EuiDescriptionList props align center is rendered 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--row euiDescriptionList--center css-1iwa4bq-center"
/>
`;

exports[`EuiDescriptionList props align left is rendered 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--row emotion-EuiDescriptionList"
/>
`;

exports[`EuiDescriptionList props compressed is rendered 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--row euiDescriptionList--compressed emotion-EuiDescriptionList"
/>
`;

exports[`EuiDescriptionList props listItems descriptionProps is rendered 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--row emotion-EuiDescriptionList"
>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList__title-normal"
  >
    Title 1
  </dt>
  <dd
    aria-label="aria-label"
    class="euiDescriptionList__description testClass1 testClass2 css-1u82jm0-normal"
    data-test-subj="test subject string"
  >
    Description 1
  </dd>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList__title-normal"
  >
    <em>
      Title 2
    </em>
  </dt>
  <dd
    aria-label="aria-label"
    class="euiDescriptionList__description testClass1 testClass2 css-1u82jm0-normal"
    data-test-subj="test subject string"
  >
    <code>
      Description 2
    </code>
  </dd>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList__title-normal"
  >
    Title 3
  </dt>
  <dd
    aria-label="aria-label"
    class="euiDescriptionList__description testClass1 testClass2 css-1u82jm0-normal"
    data-test-subj="test subject string"
  >
    Description 3
  </dd>
</dl>
`;

exports[`EuiDescriptionList props listItems titleProps is rendered 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--row emotion-EuiDescriptionList"
>
  <dt
    aria-label="aria-label"
    class="euiDescriptionList__title testClass1 testClass2 emotion-euiDescriptionList__title-normal"
    data-test-subj="test subject string"
  >
    Title 1
  </dt>
  <dd
    class="euiDescriptionList__description css-1u82jm0-normal"
  >
    Description 1
  </dd>
  <dt
    aria-label="aria-label"
    class="euiDescriptionList__title testClass1 testClass2 emotion-euiDescriptionList__title-normal"
    data-test-subj="test subject string"
  >
    <em>
      Title 2
    </em>
  </dt>
  <dd
    class="euiDescriptionList__description css-1u82jm0-normal"
  >
    <code>
      Description 2
    </code>
  </dd>
  <dt
    aria-label="aria-label"
    class="euiDescriptionList__title testClass1 testClass2 emotion-euiDescriptionList__title-normal"
    data-test-subj="test subject string"
  >
    Title 3
  </dt>
  <dd
    class="euiDescriptionList__description css-1u82jm0-normal"
  >
    Description 3
  </dd>
</dl>
`;

exports[`EuiDescriptionList props type column is rendered 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--column css-1jouv5f-column-flex"
/>
`;

exports[`EuiDescriptionList props type inline is rendered 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--inline emotion-EuiDescriptionList"
/>
`;

exports[`EuiDescriptionList props type responsiveColumn is rendered 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--responsiveColumn css-14xopgo-responsiveColumn-flex"
/>
`;

exports[`EuiDescriptionList props type row is rendered 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--row emotion-EuiDescriptionList"
/>
`;
